--- a/examples/nuxt.js-with-runtime-rendering/package.json
+++ b/examples/nuxt.js-with-runtime-rendering/package.json
@@ -9,7 +9,8 @@
         "postinstall": "nuxt prepare"
     },
     "dependencies": {
-        "@master/css.vue": "workspace:*"
+        "@master/css": "workspace:^",
+        "@master/css.vue": "workspace:^"
     },
     "devDependencies": {
         "@types/node": "^18",
