--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "private": true,
     "scripts": {
         "postinstall": "husky install && pnpm ls --r --filter \"./packages/*\"",
-        "build": "npm run build:packages && npm run build:examples",
-        "build:packages": "turbo run build --filter=./packages/**/* && npm i",
+        "build": "pnpm run build:packages && pnpm run build:examples",
+        "build:packages": "turbo run build --filter=./packages/**/* && pnpm i",
         "build:examples": "turbo run build --filter=./examples/**/* --parallel --concurrency=30",
-        "check": "npm run commit-check && npm run build && turbo run test lint type-check --parallel --filter=./packages/**/*",
+        "check": "pnpm run commit-check && pnpm run build && turbo run test lint type-check --parallel --filter=./packages/**/*",
         "test": "turbo run test --parallel --filter=./packages/**/*",
         "lint": "turbo run lint --parallel --filter=./packages/**/*",
         "type-check": "turbo run type-check --parallel --filter=./packages/**/*",
@@ -27,11 +27,12 @@
         "shared/"
     ],
     "devDependencies": {
-        "@techor/fs": "^2.4.5",
-        "@techor/glob": "^2.4.5",
-        "@techor/jest": "^2.4.5",
-        "@techor/jest-dom": "^2.4.5",
-        "@techor/repo": "^2.4.5",
+        "@master/css-renderer": "workspace:^",
+        "@techor/fs": "^2.5.2",
+        "@techor/glob": "^2.5.2",
+        "@techor/jest": "^2.5.2",
+        "@techor/jest-dom": "^2.5.2",
+        "@techor/repo": "^2.5.2",
         "@types/jest": "^29.5.2",
         "@types/node": "^20.4.0",
         "concurrently": "^8.2.0",
@@ -43,7 +44,7 @@
         "nodemon": "^2.0.22",
         "pretty-ms": "^8.0.0",
         "puppeteer": "^20.8.0",
-        "shared": "workspace:*",
+        "shared": "workspace:^",
         "shuffle-array": "^1.0.1",
         "spawnd": "^9.0.0",
         "strip-ansi": "^7.1.0",
