--- a/.github/workflows/commit-check.yml
+++ b/.github/workflows/commit-check.yml
@@ -22,9 +22,13 @@ jobs:
             - uses: actions/checkout@v3
               with:
                   fetch-depth: 0
+            - uses: pnpm/action-setup@v2
+              with:
+                  version: 8
             - uses: actions/setup-node@v3
               with:
                   node-version: ${{ matrix.node-version }}
-                  cache: "npm"
-            - run: npm ci
-            - run: npm run commit-check
+                  cache: 'pnpm'
+            - run: pnpm install
+            - run: pnpm run build
+            - run: pnpm run commit-check
