--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,9 +19,13 @@ jobs:
                 node-version: [18]
         steps:
             - uses: actions/checkout@v3
+            - uses: pnpm/action-setup@v2
+              with:
+                  version: 8
             - uses: actions/setup-node@v3
               with:
                   node-version: ${{ matrix.node-version }}
-                  cache: "npm"
-            - run: npm ci
-            - run: npm run lint
+                  cache: 'pnpm'
+            - run: pnpm install
+            - run: pnpm run build
+            - run: pnpm run lint
