--- a/.github/workflows/pull-request-title-check.yml
+++ b/.github/workflows/pull-request-title-check.yml
@@ -16,7 +16,7 @@ jobs:
                 node-version: [18]
         steps:
             - name: Aron Actions
-              uses: 1aron/aronrepo@1.0.0
+              uses: 1aron/techor@v2.5.2
               with:
                   action: "check-pull-request-title"
               env:
