--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,13 +14,16 @@ jobs:
                 node-version: [18]
         steps:
             - uses: actions/checkout@v3
+            - uses: pnpm/action-setup@v2
+              with:
+                  version: 8
             - uses: actions/setup-node@v3
               with:
                   node-version: ${{ matrix.node-version }}
                   registry-url: "https://registry.npmjs.org"
-                  cache: "npm"
-            - run: npm ci
-            - run: npm run build
+                  cache: 'pnpm'
+            - run: pnpm install
+            - run: pnpm run build
 
             - uses: lewagon/wait-on-check-action@v1.3.1
               with:
