--- a/examples/nuxt.js-with-static-extraction/package.json
+++ b/examples/nuxt.js-with-static-extraction/package.json
@@ -8,7 +8,8 @@
         "preview": "nuxt prepare && nuxt preview"
     },
     "devDependencies": {
-        "@master/css-extractor.vite": "workspace:*",
+        "@master/css": "workspace:^",
+        "@master/css-extractor.vite": "workspace:^",
         "@types/node": "^18",
         "nuxt": "^3.5.2"
     }
