--- a/examples/svelte-with-static-extraction/package.json
+++ b/examples/svelte-with-static-extraction/package.json
@@ -10,17 +10,18 @@
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
     },
     "devDependencies": {
-        "@master/css-extractor.vite": "workspace:*",
+        "@master/css": "workspace:^",
+        "@master/css-extractor.vite": "workspace:^",
         "@fontsource/fira-mono": "^4.5.10",
         "@neoconfetti/svelte": "^1.0.0",
         "@sveltejs/adapter-auto": "^2.0.0",
-        "@sveltejs/kit": "^1.5.0",
+        "@sveltejs/kit": "^1.22.4",
         "@types/cookie": "^0.5.1",
-        "svelte": "^3.54.0",
-        "svelte-check": "^3.0.1",
+		"svelte": "^4.0.5",
+		"svelte-check": "^3.4.3",
         "tslib": "^2.4.1",
         "typescript": "^5.0.0",
-        "vite": "^4.2.0"
+		"vite": "^4.4.2"
     },
     "type": "module"
 }
