--- a/examples/vue.js-with-progressive-rendering/package.json
+++ b/examples/vue.js-with-progressive-rendering/package.json
@@ -5,12 +5,12 @@
     "type": "module",
     "scripts": {
         "dev": "node server",
-        "build": "npm run build:client && npm run build:server",
-        "build:noExternal": "npm run build:client && npm run build:server:noExternal",
+        "build": "pnpm run build:client && pnpm run build:server",
+        "build:noExternal": "pnpm run build:client && pnpm run build:server:noExternal",
         "build:client": "vite build --ssrManifest --outDir dist/client",
         "build:server": "vite build --ssr src/entry-server.js --outDir dist/server",
         "build:server:noExternal": "vite build --config vite.config.noexternal.js --ssr src/entry-server.js --outDir dist/server",
-        "generate": "vite build --ssrManifest --outDir dist/static && npm run build:server && node prerender",
+        "generate": "vite build --ssrManifest --outDir dist/static && pnpm run build:server && node prerender",
         "serve": "NODE_ENV=production node server",
         "debug": "node --inspect-brk server"
     },
