--- a/packages/server.nitro/package.json
+++ b/packages/server.nitro/package.json
@@ -2,7 +2,7 @@
     "name": "@master/css-server.nitro",
     "scripts": {
         "build": "techor pack --platform node",
-        "dev": "npm run build -- --watch",
+        "dev": "pnpm run build --watch",
         "type-check": "tsc --noEmit",
         "lint": "eslint src"
     },
