--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -3,7 +3,7 @@
     "type": "module",
     "scripts": {
         "build": "techor pack './src/**/*.{ts,svelte}' --bundle --format esm --esm-ext .js --entry-names [dir]/[name]",
-        "dev": "npm run build -- --watch",
+        "dev": "pnpm run build --watch",
         "type-check": "tsc --noEmit"
     },
     "license": "MIT",
