--- a/packages/theme-service/package.json
+++ b/packages/theme-service/package.json
@@ -2,7 +2,7 @@
     "name": "theme-service",
     "scripts": {
         "build": "techor pack",
-        "dev": "npm run build -- --watch",
+        "dev": "pnpm run build --watch",
         "test": "jest",
         "type-check": "tsc --noEmit",
         "lint": "eslint src"
