--- a/.github/workflows/sync-dev-branches.yml
+++ b/.github/workflows/sync-dev-branches.yml
@@ -6,14 +6,21 @@ on:
 
 jobs:
     check:
-        timeout-minutes: 20
+        timeout-minutes: 15
         runs-on: ubuntu-20.04
         strategy:
             matrix:
-                node-version: [18.17.0]
+                node-version: [18]
         steps:
             - uses: actions/checkout@v3
-            - name: Sync dev branches
+            - uses: pnpm/action-setup@v2
+              with:
+                  version: 8
+            - uses: actions/setup-node@v3
+              with:
+                  node-version: 18
+                  cache: "pnpm"
+            - name: Techor Actions
               uses: 1aron/techor@v2.5.3
               with:
                   action: "sync-dev-branches"
