--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -79,6 +79,7 @@
         "@techor/pack": "^2.5.3",
         "csstype": "^3.1.2",
         "shared": "workspace:^",
-        "vite": "^4.2.1"
+        "vite": "^4.2.1",
+        "puppeteer": "^21.0.1"
     }
 }
