--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
               with:
                   node-version: ${{ matrix.node-version }}
                   registry-url: "https://registry.npmjs.org"
-                  cache: 'pnpm'
+                  cache: "pnpm"
             - run: pnpm install
             - run: pnpm run build
 
@@ -31,9 +31,8 @@ jobs:
                   check-regexp: test.*|check.*|commit-check.*|lint.*
                   repo-token: ${{ secrets.GITHUB_TOKEN }}
                   wait-interval: 10
-
-            - run: npx --no -- semantic-release
+            - run: pnpm dlx semantic-release
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                  NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+                  NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
                   VSCE_PAT: ${{ secrets.VSCE_PAT }}
