--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
     "private": true,
     "scripts": {
         "postinstall": "husky install && pnpm ls --r --filter \"./packages/*\"",
-        "build": "cross-env NODE_OPTIONS=--max-old-space-size=8192 pnpm run build:packages && pnpm run build:examples",
-        "build:packages": "turbo run build --filter=./packages/**/* && pnpm i",
-        "build:examples": "turbo run build --filter=./examples/**/* --parallel --concurrency=30",
+        "build": "pnpm run build:packages && pnpm run build:examples",
+        "build:packages": "cross-env NODE_OPTIONS=--max-old-space-size=8192 turbo run build --filter=./packages/**/* && pnpm i",
+        "build:examples": "cross-env NODE_OPTIONS=--max-old-space-size=8192 turbo run build --filter=./examples/**/* --parallel --concurrency=30",
         "check": "pnpm run commit-check && pnpm run build && turbo run test lint type-check --parallel --filter=./packages/**/*",
         "test": "turbo run test --parallel --filter=./packages/**/*",
         "lint": "turbo run lint --parallel --filter=./packages/**/*",
