--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
         "build:packages": "cross-env NODE_OPTIONS=--max-old-space-size=8192 turbo run build --filter=./packages/**/* && pnpm i",
         "build:examples": "cross-env NODE_OPTIONS=--max-old-space-size=8192 turbo run build --filter=./examples/**/* --parallel --concurrency=30",
         "check": "pnpm run commit-check && pnpm run build && turbo run test lint type-check --parallel --filter=./packages/**/*",
-        "test": "turbo run test --parallel --filter=./packages/**/*",
-        "lint": "turbo run lint --parallel --filter=./packages/**/*",
-        "type-check": "turbo run type-check --parallel --filter=./packages/**/*",
+        "test": "cross-env NODE_OPTIONS=--max-old-space-size=8192 turbo run test --parallel --filter=./packages/**/*",
+        "lint": "cross-env NODE_OPTIONS=--max-old-space-size=8192 turbo run lint --parallel --filter=./packages/**/*",
+        "type-check": "cross-env NODE_OPTIONS=--max-old-space-size=8192 turbo run type-check --parallel --filter=./packages/**/*",
         "commit-check": "commitlint --from=HEAD~1 --verbose",
         "dev": "cross-env NODE_OPTIONS=--max-old-space-size=8192 turbo run dev --filter=./packages/* --no-cache --force --concurrency=30",
         "clean": "rm -rf node_modules && rm -rf package-lock.json && rm -rf **/*package-lock.json && rm -rf **/*node_modules && rm -rf **/*dist && rm -rf **/*.turbo"
