--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,5 +30,7 @@ jobs:
             - run: pnpm exec semantic-release
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  # Fix: Please make sure to set the `NPM_TOKEN` environment variable in your CI with the exact value of the npm token.
+                  NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
                   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
                   VSCE_PAT: ${{ secrets.VSCE_PAT }}
