--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
         "postinstall": "husky install && pnpm ls --r --filter \"./packages/*\"",
         "build": "pnpm run build:packages && pnpm run build:examples",
         "build:packages": "cross-env NODE_OPTIONS=--max-old-space-size=16384 turbo run build --filter=./packages/**/* && pnpm i",
-        "build:examples": "cross-env NODE_OPTIONS=--max-old-space-size=16384 turbo run build --filter=./examples/**/* --parallel --concurrency=30",
+        "build:examples": "cross-env NODE_OPTIONS=--max-old-space-size=16384 turbo run build --filter=./examples/**/* --parallel",
         "check": "pnpm run commit-check && pnpm run build && turbo run test lint type-check --parallel --filter=./packages/**/*",
         "test": "cross-env NODE_OPTIONS=--max-old-space-size=16384 turbo run test --parallel --filter=./packages/**/*",
         "lint": "cross-env NODE_OPTIONS=--max-old-space-size=16384 turbo run lint --parallel --filter=./packages/**/*",
