--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
     "scripts": {
         "postinstall": "husky install && pnpm ls --r --filter \"./packages/*\"",
         "build": "pnpm run build:packages && pnpm run build:examples",
-        "build:packages": "cross-env NODE_OPTIONS=--max-old-space-size=16384 turbo run build --filter=./packages/**/* && pnpm i",
-        "build:examples": "cross-env NODE_OPTIONS=--max-old-space-size=16384 turbo run build --filter=./examples/**/* --parallel",
-        "check": "pnpm run commit-check && pnpm run build && turbo run test lint type-check --parallel --filter=./packages/**/*",
-        "test": "cross-env NODE_OPTIONS=--max-old-space-size=16384 turbo run test --parallel --filter=./packages/**/*",
-        "lint": "cross-env NODE_OPTIONS=--max-old-space-size=16384 turbo run lint --parallel --filter=./packages/**/*",
-        "type-check": "cross-env NODE_OPTIONS=--max-old-space-size=16384 turbo run type-check --parallel --filter=./packages/**/*",
+        "build:packages": "cross-env NODE_OPTIONS=--max-old-space-size=16384 turbo run build --filter=./packages/* && pnpm i",
+        "build:examples": "cross-env NODE_OPTIONS=--max-old-space-size=16384 turbo run build --filter=./examples/*",
+        "check": "pnpm run commit-check && pnpm run build && turbo run test lint type-check --parallel --filter=./packages/*",
+        "test": "cross-env NODE_OPTIONS=--max-old-space-size=16384 turbo run test --parallel --filter=./packages/*",
+        "lint": "cross-env NODE_OPTIONS=--max-old-space-size=16384 turbo run lint --parallel --filter=./packages/*",
+        "type-check": "cross-env NODE_OPTIONS=--max-old-space-size=16384 turbo run type-check --parallel --filter=./packages/*",
         "commit-check": "commitlint --from=HEAD~1 --verbose",
         "dev": "cross-env NODE_OPTIONS=--max-old-space-size=16384 turbo run dev --filter=./packages/* --no-cache --force --concurrency=30",
         "clean": "rm -rf node_modules && rm -rf package-lock.json && rm -rf **/*package-lock.json && rm -rf **/*node_modules && rm -rf **/*dist && rm -rf **/*.turbo"
