--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -2,7 +2,7 @@
     "name": "@master/css",
     "scripts": {
         "build": "techor pack --external @master/css-renderer @master/css-extractor",
-        "dev": "pnpm run build --watch",
+        "dev": "pnpm run build --watch --no-declare",
         "test": "jest",
         "type-check": "tsc --noEmit",
         "lint": "eslint src"
