--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -2,7 +2,7 @@
     "name": "@master/css.react",
     "scripts": {
         "build": "techor pack",
-        "dev": "pnpm run build --watch",
+        "dev": "pnpm run build --watch --no-declare",
         "type-check": "tsc --noEmit",
         "lint": "eslint src",
         "test": "jest"
