--- a/packages/class-variant/package.json
+++ b/packages/class-variant/package.json
@@ -10,7 +10,7 @@
     "license": "MIT",
     "description": "Create reusable, extensible, and customizable style class variants",
     "author": "Aoyue Design LLC.",
-    "funding": "https://docs.master.co/css/donate",
+    "funding": "https://css.master.co/docs/donate",
     "homepage": "https://css.master.co",
     "bugs": {
         "url": "https://github.com/master-co/css/issues"
