--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -9,7 +9,7 @@
     "license": "MIT",
     "description": "Integration of Master CSS in Svelte",
     "author": "Aoyue Design LLC.",
-    "funding": "https://docs.master.co/css/donate",
+    "funding": "https://css.master.co/docs/donate",
     "homepage": "https://css.master.co",
     "bugs": {
         "url": "https://github.com/master-co/css/issues"
