--- a/packages/vscode-language-service/package.json
+++ b/packages/vscode-language-service/package.json
@@ -10,7 +10,7 @@
     "description": "Master CSS Language Service for Visual Studio Code",
     "displayName": "Master CSS Language Service",
     "author": "Aoyue Design LLC.",
-    "funding": "https://docs.master.co/css/donate",
+    "funding": "https://css.master.co/docs/donate",
     "homepage": "https://beta.css.master.co/docs/installation/language-service",
     "license": "MIT",
     "publisher": "masterco",
