--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -12,7 +12,7 @@
     "license": "MIT",
     "description": "Integrate Master CSS in Vue way",
     "author": "Aoyue Design LLC.",
-    "funding": "https://docs.master.co/css/donate",
+    "funding": "https://css.master.co/docs/donate",
     "homepage": "https://css.master.co",
     "bugs": {
         "url": "https://github.com/master-co/css/issues"
