--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,8 +1,5 @@
 {
     "name": "@master/eslint-config-css",
-    "scripts": {
-        "test": "mocha tests --recursive"
-    },
     "keywords": [
         "mastercss",
         "eslint",
@@ -11,7 +8,7 @@
     "license": "MIT",
     "description": "Master CSS ESLint Plugin Config",
     "author": "Aoyue Design LLC.",
-    "funding": "https://docs.master.co/css/donate",
+    "funding": "https://css.master.co/docs/donate",
     "homepage": "https://css.master.co",
     "bugs": {
         "url": "https://github.com/master-co/css/issues"
@@ -25,7 +22,7 @@
     "publishConfig": {
         "access": "public"
     },
-    "devDependencies": {
-        "eslint": "^7.1.0"
+    "dependencies": {
+        "@master/eslint-plugin-css": "workspace:^"
     }
 }
