--- a/packages/eslint-plugin/package.json
+++ b/packages/eslint-plugin/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@master/eslint-plugin-css",
     "scripts": {
-        "test": "mocha tests --recursive"
+        "test": "mocha tests --recursive --timeout 5000"
     },
     "keywords": [
         "mastercss",
