--- a/examples/eslint/package.json
+++ b/examples/eslint/package.json
@@ -2,8 +2,11 @@
     "name": "master-css-eslint-example",
     "devDependencies": {
         "@angular-eslint/template-parser": "^16.2.0",
+        "@master/css.react": "workspace:^",
         "@master/eslint-config-css": "workspace:^",
         "@master/eslint-plugin-css": "workspace:^",
+        "@typescript-eslint/parser": "^6.9.0",
+        "clsx": "^2.0.0",
         "eslint": "^8.51.0"
     }
 }
