--- a/packages/eslint-plugin/package.json
+++ b/packages/eslint-plugin/package.json
@@ -1,8 +1,7 @@
 {
     "name": "@master/eslint-plugin-css",
     "scripts": {
-        "test": "mocha tests --recursive --timeout 10000",
-        "test:file": "mocha tests"
+        "test": "jest"
     },
     "keywords": [
         "mastercss",
@@ -39,7 +38,6 @@
         "@types/node": "^20.6.0",
         "@typescript-eslint/parser": "^5.50.0",
         "eslint": "^7.1.0",
-        "mocha": "^10.2.0",
         "svelte-eslint-parser": "^0.33.1",
         "vue-eslint-parser": "^9.3.1"
     }
