--- a/packages/eslint-plugin/package.json
+++ b/packages/eslint-plugin/package.json
@@ -30,6 +30,7 @@
     "dependencies": {
         "@master/css": "workspace:^",
         "@master/css-validator": "workspace:^",
+        "css-tree": "^2.3.1",
         "explore-config": "^2.2.10",
         "requireindex": "^1.2.0"
     },
