--- a/packages/validator/package.json
+++ b/packages/validator/package.json
@@ -38,7 +38,7 @@
     },
     "dependencies": {
         "@master/css": "workspace:^",
-        "csstree-validator": "^3.0.0"
+        "css-tree": "^2.3.1"
     },
     "devDependencies": {
         "shared": "workspace:^",
