--- a/packages/eslint-plugin/tsconfig.json
+++ b/packages/eslint-plugin/tsconfig.json
@@ -2,7 +2,8 @@
     "extends": "../../tsconfig.json",
     "compilerOptions": {
         "baseUrl": ".",
-        "rootDir": "src"
+        "rootDir": "src",
+        "moduleResolution": "Bundler"
     },
     "include": [
         "src/**/*"
