--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
         "nanoid": "^4.0.2",
         "nodemon": "^2.0.22",
         "pretty-ms": "^8.0.0",
-        "shared": "workspace:^",
+        "css-shared": "workspace:^",
         "shuffle-array": "^1.0.1",
         "spawnd": "^9.0.0",
         "strip-ansi": "^7.1.0",
