--- a/packages/validator/package.json
+++ b/packages/validator/package.json
@@ -41,7 +41,7 @@
         "css-tree": "^2.3.1"
     },
     "devDependencies": {
-        "shared": "workspace:^",
+        "css-shared": "workspace:^",
         "ts-jest": "^29.1.0"
     }
 }
